fix panel menu on mobile devices

--- a/styles/layout/_main_header.scss
+++ b/styles/layout/_main_header.scss
@@ -6,32 +6,6 @@
 
   @apply font-normal text-lg;
 
-  &__toggle {
-    @apply flex flex-col gap-1;
-    @apply lg:hidden;
-
-    span {
-      @apply block w-5 bg-baltic-sea;
-      height: 2px;
-      @apply transition-all;
-      @apply duration-700;
-    }
-
-    &.open {
-      span {
-        &:first-child {
-          transform: translateY(4px) rotate(45deg);
-          @apply origin-center;
-        }
-
-        &:last-child {
-          transform: translateY(-2px) rotate(-45deg);
-          @apply origin-center;
-        }
-      }
-    }
-  }
-
   &__logo {
     @apply max-h-8;
 
