--- a/styles/pages/_cards.scss
+++ b/styles/pages/_cards.scss
@@ -1,3 +1,4 @@
 .cards {
   @apply grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-6;
+  @apply pb-20 lg:pb-0;
 }
